--- a/style.css
+++ b/style.css
@@ -636,6 +636,14 @@ li {
         grid-column: 1/3;
     }
 
+    .content-form input[type="date"] {
+        grid-column: 1/2;
+    }
+
+    .content-form input[type="number"] {
+        grid-column: 2/3;
+    }
+
     .menu-footer {
         justify-content: center;
     }
